--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+
     implementation 'com.android.support:exifinterface:26.1.0'
     implementation 'com.otaliastudios:cameraview:1.5.1'
 
